fix card flip so that back card doesnt overlap with other cards, added some dynamic sizing for back card to cause all card in row to resize to the same size
The resizing is not perfect but in a good spot nonetheless

--- a/styles.css
+++ b/styles.css
@@ -275,28 +275,48 @@ textarea {
     /* flex: 1; */
     padding: 2rem;
     gap: 2rem;
+    /* row-gap: 15rem; */
     /* grid-auto-flow: column; */
     /* grid-template-columns: 1fr 1fr 1.5fr; */
     grid-template-columns: repeat(auto-fill, minmax(21rem, 1fr));
-    /* grid-template-rows: repeat(auto-fill, minmax(15rem, 1fr)); */
+    /* grid-auto-columns: minmax(14rem, 21rem); */
+    grid-auto-rows: auto;
+    /* grid-template-rows: repeat(100, 1fr); */
+    /* grid-template-rows: repeat(1, 15rem); */
 }
 
 .card-body {
     position: relative;
+    align-self: stretch;
+    display: flex;
+    /* min-height: 15rem; */
+    /* min-width: 14rem; */
+}
+
+.card-content {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    transition: height 1s linear;
+}
+
+.card-body, .card-front, .card-back {
+    transition: transform 800ms cubic-bezier(0.65, -0.01, 0.2, 1), height 1s linear;
     transform-style: preserve-3d;
-    transition: transform 700ms cubic-bezier(0.65, -0.01, 0.2, 1);
 }
 
-.card-body:hover {
-    /* cursor: pointer; */
+.card-body.flipped {
+    transform: rotateY(180deg);
+    flex: 1;
 }
 
-.card-front {
+.card-front, .card-back {
     border: 3px solid black;
-    position: absolute;
+    flex: 1;
+    /* position: relative; */
     border-radius: 15px;
     min-height: 15rem;
-    min-width: 14rem;
+    /* min-width: 14rem; */
     padding: 2rem 1.5rem;
     display: flex;
     flex-direction: column;
@@ -307,17 +327,8 @@ textarea {
 }
 
 .card-back {
-    border: 3px solid black;
     position: absolute;
-    border-radius: 15px;
-    min-height: 15rem;
-    min-width: 14rem;
-    padding: 2rem 1.5rem;
-    display: flex;
-    flex-direction: column;
-    gap: 0.7rem;
-    background-color: white;
-    justify-content: center;
+    top: 0;
     transform: rotateY(180deg);
     backface-visibility: hidden;
 }
@@ -337,7 +348,8 @@ textarea {
 .card-italic-section {
     display: flex;
     align-items: center;
-    gap: 0.6rem;
+    gap: 0.45rem;
+    flex-wrap: wrap;
 }
 
 .card-italic-section h3:nth-child(2) {
@@ -345,7 +357,7 @@ textarea {
 }
 
 .card-author {
-    font-size: 1rem;
+    font-size: 0.9rem;
     font-weight: 500;
     font-style: italic;
     color: rgb(112, 112, 112);
@@ -359,7 +371,7 @@ textarea {
     font-size: 0.7rem;
 }
 
-.review-btn {
+.review-btn, .back-to-card  {
     font-size: 0.88rem;
     font-style: italic;
     font-weight: bold;
@@ -375,18 +387,6 @@ textarea {
 }
 
 .back-to-card {
-    font-size: 0.88rem;
-    font-style: italic;
-    font-weight: bold;
-    color: #b9b9b9;
-    cursor: pointer;
-    border: 0;
-    padding: 0;
-    background-color: transparent;
-    display: flex;
-    align-items: center;
-    gap: 0.2rem;
-    transition: scale 70ms linear;
     width: fit-content;
     align-self: flex-end;
 }
@@ -494,7 +494,7 @@ textarea {
     color: #33846c;
     font-size: 0.9rem;
     right: 1.5rem;
-    bottom: 2rem;
+    bottom: 1.5rem;
 }
 
 .read-more:checked::before {
@@ -526,11 +526,11 @@ textarea {
     color: rgb(22, 90, 22);
     font-style: italic;
     font-weight: bold;
-    bottom: 1.7rem;
+    bottom: 1.5rem;
     left: 1.5rem;
 }
 
 .read-more:checked ~ .card-genre {
     position: absolute;
-    bottom: 1.2rem;
+    bottom: 1.5rem;
 }
